Fixed handling of error responses and request content type definition